--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,12 @@ jobs:
             circleci-agent step halt
           fi
 
-      - run: golang/scripts/build.sh
+      # The 'git config' and 'go env' steps are to allow Go to read modules from our private Github repos
+      # The KURTOSISBOT_GITHUB_TOKEN is a secret provided at CI build time
+      - run: |
+          git config --global url."https://${KURTOSISBOT_GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
+          go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
+          golang/scripts/build.sh
 
   check_typescript:
     docker:
@@ -62,6 +67,9 @@ workflows:
                 - develop
                 - master
       - check_golang:
+          contexts:
+            # This pulls in KurtosisBot's Github token, so that we can read from our private repos
+            - github-user
           filters:
             branches:
               ignore:
