--- a/typescript/package.json
+++ b/typescript/package.json
@@ -11,7 +11,7 @@
         "build"
     ],
     "engines": {
-        "node": "= 14.17.1"
+        "node": ">= 14.17.1"
     },
     "dependencies": {
     },
