Fix typo in CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
 
   check_typescript:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.node-version>>"
+      - image: "cimg/node:<< pipeline.parameters.node-version>>"
     steps:
       - checkout
 
@@ -55,7 +55,7 @@ jobs:
 
   publish_typescript:
     docker:
-      - image: "cimg/go:<< pipeline.parameters.node-version>>"
+      - image: "cimg/node:<< pipeline.parameters.node-version>>"
     steps:
       - checkout
       - run: typescript/scripts/build.sh
